nsis: fix for iso chars

--- a/cmake/NSIS.template.in
+++ b/cmake/NSIS.template.in
@@ -132,15 +132,15 @@ VIAddVersionKey /LANG=${LANG_ENGLISH} "FileVersion" "@FILE_VERSION@"
 
 ; Polish
 LangString DESC_Section1 ${LANG_POLISH} "ET: Legacy ${VERSION} zostalo zainstalowane na twoim komputerze.$\n$\n\
-ETKEY, folder profilu i wszystkie sci?gni?te pliki znajdziesz w katalogu $DOCUMENTS\ETLegacy."
-LangString DESC_Section2 ${LANG_POLISH} "Blad Pobierania: Nie udalo sie sci?gnac Instalatora."
+ETKEY, folder profilu i wszystkie sciagniete pliki znajdziesz w katalogu $DOCUMENTS\ETLegacy."
+LangString DESC_Section2 ${LANG_POLISH} "Blad Pobierania: Nie udalo sie sciagnac Instalatora."
 LangString DESC_Section3 ${LANG_POLISH} "Blad Integrarnosci: Zla suma kontrolna MD5 Instalatora."
 LangString DESC_Section4 ${LANG_POLISH} "Podczas wypakowywania plikow W:ET ekran stanie sie czarny na kilka sekund."
-LangString DESC_Section5 ${LANG_POLISH} "Blad Krytyczny: Wypakowywanie Instalatora nie powiod?o sie."
-LangString DESC_Section6 ${LANG_POLISH} "Blad Krytyczny: Kopiowanie nie powiod?o sie (pak0.pk3)."
+LangString DESC_Section5 ${LANG_POLISH} "Blad Krytyczny: Wypakowywanie Instalatora nie powiodlo sie."
+LangString DESC_Section6 ${LANG_POLISH} "Blad Krytyczny: Kopiowanie nie powiodlo sie (pak0.pk3)."
 LangString DESC_Section7 ${LANG_POLISH} "Blad Pobierania: Nie udalo sie sciagnac Latki."
 LangString DESC_Section8 ${LANG_POLISH} "Blad Integrarnosci: Zla suma kontrolna MD5 Latki."
-LangString DESC_Section9 ${LANG_POLISH} "Blad Krytyczny: Wypakowywanie Latki nie powiodlo si?."
+LangString DESC_Section9 ${LANG_POLISH} "Blad Krytyczny: Wypakowywanie Latki nie powiodlo sie."
 LangString DESC_Section10 ${LANG_POLISH} "Blad Krytyczny: Kopiowanie nie powiodlo sie (pak1.pk3)."
 LangString DESC_Section11 ${LANG_POLISH} "Blad Krytyczny: Kopiowanie nie powiodlo sie (pak2.pk3)."
 LangString DESC_Section12 ${LANG_POLISH} "Pamietaj, aby skopiowac glowne pliki W:ET (pak0.pk3, pak1.pk3, pak2.pk3) do $INSTDIR\etmain przed uruchomieniem ET: Legacy."
