--- a/misc/etlegacy.desktop
+++ b/misc/etlegacy.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Type=Application
 Name=ET: Legacy
-GenericName=A team-based multiplayer WWII tactical first-person shooter
-Comment=A team-based multiplayer WWII tactical first-person shooter
+GenericName=World War II first-person shooter
+Comment=World War II first-person shooter
 Icon=etl
 Exec=etl +connect %u
 Terminal=false
 MimeType=x-scheme-handler/et;
 Categories=Game;ActionGame;
 StartupNotify=false
-
+Keywords=team-based;multiplayer;tactical;WWII;enemy;territory;
