misc: enable FEATURE_DBMS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ option(FEATURE_GETTEXT		"Enable localization using tinygettext"					ON)
 option(FEATURE_JANSSON		"Enable JSON support (client)"						OFF)
 option(FEATURE_SERVERMDX	"Enable MDX support on server side"					ON)
 option(FEATURE_LIVEAUTH		"Enable ET:Live authentification support"				ON)
-option(FEATURE_DBMS		"Enable dbms support (sqlite3)"						OFF)
+option(FEATURE_DBMS		"Enable dbms support (sqlite3)"						ON)
 option(FORCE_DEBUG		"Force enable legacy debug macros"					OFF)
 
 cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot in mod code (Windows, linux and OS X only)"	ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
