--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,13 +26,15 @@ option(BUILD_MOD_PK3		"Pack the mod libraries into etl_bin.pk3"			ON)
 option(BUILD_PAK3_PK3		"Pack updated game scripts into pak3.pk3"			ON)
 
 option(BUNDLED_LIBS				"Use all available bundled libraries instead of system libs."	ON)
-cmake_dependent_option(BUNDLED_SDL		"Use bundled SDL library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_CURL		"Use bundled CURL library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_JPEG		"Use bundled JPEG library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_LUA		"Use bundled LUA library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_OGG_VORBIS	"Use bundled OGG library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_THEORA		"Use bundled Theora library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_GLEW		"Use bundled GLEW library instead of the system one."	ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_SDL		"Use bundled SDL library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_ZLIB		"Use bundled ZLib library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_MINIZIP		"Use bundled Minizip library instead of the system one."	ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_JPEG		"Use bundled JPEG library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_CURL		"Use bundled CURL library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_LUA		"Use bundled LUA library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_OGG_VORBIS	"Use bundled OGG library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_THEORA		"Use bundled Theora library instead of the system one."		ON "BUNDLED_LIBS" OFF)
+cmake_dependent_option(BUNDLED_GLEW		"Use bundled GLEW library instead of the system one."		ON "BUNDLED_LIBS" OFF)
 cmake_dependent_option(BUNDLED_FREETYPE		"Use bundled Freetype2 library instead of the system one."	ON "BUNDLED_LIBS" OFF)
 cmake_dependent_option(BUNDLED_JANSSON		"Use bundled Jansson library instead of the system one."	OFF "BUNDLED_LIBS" OFF)
 cmake_dependent_option(BUNDLED_SQLITE3		"Use bundled SQLITE3 library instead of the system one."	ON "BUNDLED_LIBS" OFF)
