misc: updated .travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ env:
     - CROSS_COMPILE32=0
     - BUNDLED_LIBS=1
     - BUNDLED_SDL=1
+    - BUNDLED_ZLIB=1
+    - BUNDLED_MINIZIP=1
     - BUNDLED_JPEG=1
     - BUNDLED_LUA=1
     - BUNDLED_OGG=1
