misc: config file updates

--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -66,7 +66,7 @@ init
 
   setl g_allowVote 1
   setl vote_allow_balancedteams 0
-  setl vote_allow_cointoss 1
+  //setl vote_allow_cointoss 1
   setl vote_allow_config 1
   setl vote_allow_friendlyfire 0
   setl vote_allow_gametype 0
@@ -77,8 +77,8 @@ init
   setl vote_allow_muting 1
   setl vote_allow_nextmap 0
   setl vote_allow_referee 1
-  setl vote_allow_shuffleteams 0
   setl vote_allow_shuffleteamsxp 0
+  setl vote_allow_shuffleteamsxp_norestart 0
   setl vote_allow_surrender 0
   setl vote_allow_swapteams 1
   setl vote_allow_timelimit 1
