--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -97,24 +97,25 @@ set g_lms_followTeamOnly "1"		// Players can only spectate teammates
 
 // VOTING
 
-set g_allowVote "1"					// Enable Voting system
-set vote_limit "5"					// Number of votes allowed in a map
-set vote_percent "50"				// % "Yes" votes for it to pass
-set vote_allow_gametype "1"			// Allow gametype changing by vote
-set vote_allow_kick "1"				// Allow player kicking by vote
-set vote_allow_map "1"				// Allow map changing by vote
-set vote_allow_matchreset "1"		// Allow match restart by vote
-set vote_allow_mutespecs "1"		// Allow muting of spectators by vote
-set vote_allow_nextmap "1"			// Allow switching to next map by vote
-set vote_allow_referee "0"			// Allow getting referee status by vote
-set vote_allow_shuffleteams "1"		// Allow team shuffling by vote
-set vote_allow_swapteams "1"		// Allow team swapping by vote
-set vote_allow_friendlyfire "1"		// Allow friendly fire toggling by vote
-set vote_allow_timelimit "0"		// Allow map time limit changing by vote
-set vote_allow_warmupdamage "1"		// Allow warmup damage toggling by vote
-set vote_allow_antilag "1"			// Allow toggling Anti Lag setting by vote
-set vote_allow_balancedteams "1"	// Allow toggling Balanced teams by vote
-set vote_allow_muting "1"			// Allow player muting by vote
+set g_allowVote "1"					        // Enable Voting system
+set vote_limit "5"					        // Number of votes allowed in a map
+set vote_percent "50"				        // % "Yes" votes for it to pass
+set vote_allow_config "1"			        // Allow config changing by vote
+set vote_allow_gametype "1"			        // Allow gametype changing by vote
+set vote_allow_referee "0"			        // Allow getting referee status by vote
+set vote_allow_shuffleteamsxp "1"	        // Allow team shuffling by vote
+set vote_allow_shuffleteamsxp_norestart "1"	// Allow team shuffling no restart by vote
+set vote_allow_swapteams "1"		        // Allow team swapping by vote
+set vote_allow_friendlyfire "1"		        // Allow friendly fire toggling by vote
+set vote_allow_timelimit "0"		        // Allow map time limit changing by vote
+set vote_allow_warmupdamage "1"		        // Allow warmup damage toggling by vote
+set vote_allow_antilag "1"			        // Allow toggling Anti Lag setting by vote
+set vote_allow_balancedteams "1"	        // Allow toggling Balanced teams by vote
+set vote_allow_muting "1"			        // Allow player muting by vote
+set vote_allow_poll "1"                     // Allow free polls by vote
+set vote_allow_surrender "1"                // Allow surrender by vote
+set vote_allow_restartcampaign "1"          // Allow restart campaign by vote
+set vote_allow_nextcampaign "1"             // Allow next campaign by vote
 
 // MOD CFG - put mod related vars in an own config
 exec legacy.cfg
