general: yearly copyright update

--- a/cmake/NSIS.template.in
+++ b/cmake/NSIS.template.in
@@ -125,8 +125,8 @@ VIProductVersion "@FILE_VERSION@"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "ProductName" "Enemy Territory Legacy Installer"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "Comments" "ETL game installer"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "CompanyName" "Legacy Team"
-VIAddVersionKey /LANG=${LANG_ENGLISH} "LegalTrademarks" "© 2011-2015 Legacy Team"
-VIAddVersionKey /LANG=${LANG_ENGLISH} "LegalCopyright" "© 2011-2015 Legacy Team"
+VIAddVersionKey /LANG=${LANG_ENGLISH} "LegalTrademarks" "© 2012-2016 ET:Legacy Team"
+VIAddVersionKey /LANG=${LANG_ENGLISH} "LegalCopyright" "© 2012-2016 ET:Legacy Team"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "FileDescription" "ETL Installer"
 VIAddVersionKey /LANG=${LANG_ENGLISH} "FileVersion" "@FILE_VERSION@"
 
@@ -157,8 +157,8 @@ LangString DESC_Section22 ${LANG_POLISH} "ET: Legacy wymaga MS VC++ 2013 Redistr
 VIAddVersionKey /LANG=${LANG_POLISH} "ProductName" "Instalator Enemy Territory Legacy"
 VIAddVersionKey /LANG=${LANG_POLISH} "Comments" "Instalator gry ETL"
 VIAddVersionKey /LANG=${LANG_POLISH} "CompanyName" "Legacy Team"
-VIAddVersionKey /LANG=${LANG_POLISH} "LegalTrademarks" "© 2011-2015 Legacy Team"
-VIAddVersionKey /LANG=${LANG_POLISH} "LegalCopyright" "© 2011-2015 Legacy Team"
+VIAddVersionKey /LANG=${LANG_POLISH} "LegalTrademarks" "© 2012-2016 ET:Legacy Team"
+VIAddVersionKey /LANG=${LANG_POLISH} "LegalCopyright" "© 2012-2016 ET:Legacy Team"
 VIAddVersionKey /LANG=${LANG_POLISH} "FileDescription" "Instalator ETL"
 VIAddVersionKey /LANG=${LANG_POLISH} "FileVersion" "@FILE_VERSION@"
 
