easybuild-win:find the newest VS version, MV: enabled multiview by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ option(FEATURE_OPENAL		"Enable OpenAL sound backend (client)"					ON)
 option(FEATURE_FREETYPE		"Enable Freetype font library support (client)"				ON)
 option(FEATURE_TRACKER		"Enable extended server statistics (server)"				OFF)
 option(FEATURE_LUA		"Enable Lua support in game code"					ON)
-option(FEATURE_MULTIVIEW	"Compile the mod files with multiview support (broken)"			OFF)
+option(FEATURE_MULTIVIEW	"Compile the mod files with multiview support (broken)"			ON)
 option(FEATURE_ANTICHEAT	"Enable server side anti-wallhack code (experimental)"			ON)
 option(FEATURE_CURSES		"Enable PDCurses console"						OFF)
 option(FEATURE_AUTOUPDATE	"Enable updater which downloads latest ET:L files"			ON)
