Fixed the OSX build with OpenAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,41 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 include(GetGitRevisionDescription)
 include(CMakeDependentOption)
 
+macro(LEG_BUNDLE _NAME _DESC)
+	# Cannot use ARGN directly with list() command.
+	# Copy to a variable first.
+	set (extra_macro_args ${ARGN})
+	set(LEG_BUNDLE_${_NAME}_VALID TRUE)
+
+	# Did we get any optional args?
+	list(LENGTH extra_macro_args num_extra_args)
+	if (${num_extra_args} GREATER 0)
+		foreach(argument ${extra_macro_args})
+			message(STATUS "Testing rule ${argument} for ${_DESC}")
+			if(${argument})
+				message(STATUS "${_DESC} passed")
+			else()
+				message(STATUS "${_DESC} failed")
+				set(LEG_BUNDLE_${_NAME}_VALID FALSE)
+				#return()
+			endif()
+		endforeach()
+		#list(GET extra_macro_args 0 optional_arg)
+		#message ("Got an optional arg: ${optional_arg}")
+		#if(${optional_arg})
+		#	return()
+		#	message("Is true")
+		#endif()
+	endif ()
+
+	list(APPEND ALLOPTIONS "BUNDLED_${_NAME}")
+	if (${LEG_BUNDLE_${_NAME}_VALID})
+		cmake_dependent_option("BUNDLED_${_NAME}" "Use bundled ${_DESC} library instead of the system one." ON "BUNDLED_LIBS" OFF)
+	else()
+		cmake_dependent_option("BUNDLED_${_NAME}" "Use bundled ${_DESC} library instead of the system one." OFF "BUNDLED_LIBS" OFF)
+	endif ()
+endmacro()
+
 #-----------------------------------------------------------------
 # Options
 #-----------------------------------------------------------------
@@ -26,19 +61,21 @@ option(BUILD_MOD_PK3		"Pack the mod libraries into etl_bin.pk3"			ON)
 option(BUILD_PAK3_PK3		"Pack updated game scripts into pak3.pk3"			ON)
 
 option(BUNDLED_LIBS				"Use all available bundled libraries instead of system libs."	ON)
-cmake_dependent_option(BUNDLED_SDL		"Use bundled SDL library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_ZLIB		"Use bundled ZLib library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_MINIZIP		"Use bundled Minizip library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_JPEG		"Use bundled JPEG library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_CURL		"Use bundled CURL library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_LUA		"Use bundled LUA library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_OGG_VORBIS	"Use bundled OGG library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_THEORA		"Use bundled Theora library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_OPENAL		"Use bundled OpenAL library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_GLEW		"Use bundled GLEW library instead of the system one."		ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_FREETYPE		"Use bundled Freetype2 library instead of the system one."	ON "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_JANSSON		"Use bundled Jansson library instead of the system one."	OFF "BUNDLED_LIBS" OFF)
-cmake_dependent_option(BUNDLED_SQLITE3		"Use bundled SQLITE3 library instead of the system one."	ON "BUNDLED_LIBS" OFF)
+
+LEG_BUNDLE(SDL SDL)
+LEG_BUNDLE(ZLIB Zlib)
+LEG_BUNDLE(MINIZIP Minizip)
+LEG_BUNDLE(JPEG JPEG)
+LEG_BUNDLE(CURL Curl "NOT APPLE")
+LEG_BUNDLE(LUA Lua)
+LEG_BUNDLE(OGG_VORBIS OGG)
+LEG_BUNDLE(THEORA Theora)
+LEG_BUNDLE(OPENAL OpenAL "NOT APPLE")
+LEG_BUNDLE(OPENAL_INCLUDE OpenAL-OSX "APPLE")
+LEG_BUNDLE(GLEW Glew)
+LEG_BUNDLE(FREETYPE Freetype2)
+LEG_BUNDLE(JANSSON Jansson)
+LEG_BUNDLE(SQLITE3 SQlite3)
 
 # no support for 32 bit binaries on OpenBSD/amd64
 cmake_dependent_option(CROSS_COMPILE32 "Compile 32-bit version of ET:L (64bit is incompatible with 2.60b)" ON "NOT CMAKE_SYSTEM MATCHES OpenBSD*" OFF)
