win: fix the cmakelist argument checkup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ macro(LEG_BUNDLE _NAME _DESC)
 	if (${num_extra_args} GREATER 0)
 		foreach(argument ${extra_macro_args})
 			message(STATUS "Testing rule ${argument} for ${_DESC}")
+			separate_arguments(argument)
 			if(${argument})
 				message(STATUS "${_DESC} passed")
 			else()
