cgame: added default binds for multiview, refs #394

--- a/etmain/default_left.cfg
+++ b/etmain/default_left.cfg
@@ -71,6 +71,9 @@ bind F2 "vote no"
 bind F3 "ready"
 bind F4 "notready"
 
+bind m "mvactivate"
+bind BACKSPACE "spechelp"
+
 bind F11 "autoscreenshot"
 bind F12 "autorecord"
 
