--- a/etmain/default.cfg
+++ b/etmain/default.cfg
@@ -66,6 +66,9 @@ bind F2 "vote no"
 bind F3 "ready"
 bind F4 "notready"
 
+bind m "mvactivate"
+bind BACKSPACE "spechelp"
+
 bind F11 "autoscreenshot"
 bind F12 "autorecord"
 
