--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -107,8 +107,6 @@ init
   //To be implemented
   //setl g_ettv_flags 3
 
-  //Needs to be implemented
-  //setl g_shrug 0
   setl g_pronedelay 1
 
   setl lua_modules ""
@@ -146,7 +144,7 @@ init
   command "sv_cvar r_allowextensions EQ 1"
   command "sv_cvar r_ati_fsaa_samples EQ 0"
   command "sv_cvar r_ati_truform_tess EQ 0"
-  command "sv_cvar r_clamptoedge EQ 1"
+  command "sv_cvar r_clamptoedge EQ 1" // vanilla clients only
   command "sv_cvar r_colorMipLevels EQ 0"
   command "sv_cvar r_depthbits IN 24 32"
   command "sv_cvar r_detailtextures EQ 0"
