--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ option(FEATURE_SERVERMDX	"Enable MDX support on server side"					ON)
 option(FEATURE_LIVEAUTH		"Enable ET:Live authentification support"				ON)
 option(FEATURE_DBMS		"Enable dbms support (sqlite3)"						ON)
 option(FEATURE_RATING		"Enable skill rating"							OFF)
+option(FEATURE_LUASQL		"Builds and installs LuaSQL (requires FEATURE_LUA and FEATURE_DBMS to be set)"					OFF)
 option(FORCE_DEBUG		"Force enable legacy debug macros"					OFF)
 
 cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot in mod code (Windows, linux and OS X only)"	ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
