--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ option(FEATURE_FREETYPE		"Enable Freetype font library support (client)"				ON)
 option(FEATURE_TRACKER		"Enable extended server statistics (server)"				OFF)
 option(FEATURE_LUA		"Enable Lua support in game code"					ON)
 option(FEATURE_MULTIVIEW	"Compile the mod files with multiview support (broken)"			ON)
-option(FEATURE_EDV          "Compile the mod files with edv support "			ON)
+option(FEATURE_EDV		"Compile the mod files with extended demo viewer support"		ON)
 option(FEATURE_ANTICHEAT	"Enable server side anti-wallhack code (experimental)"			ON)
 option(FEATURE_CURSES		"Enable PDCurses console"						OFF)
 option(FEATURE_AUTOUPDATE	"Enable updater which downloads latest ET:L files"			ON)
