cgame: fix weapon config parser and affected files

--- a/etmain/models/multiplayer/ammopack/weapon.cfg
+++ b/etmain/models/multiplayer/ammopack/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
 //
-//		Luger
+//		AMMOPACK
 //
 ///////////////////////
 
@@ -17,19 +17,19 @@ newfmt
 ///   /   /   /   /   /   ______________________________/
 //   /   /   /   /   /   /
 
-0	1	20	0	0	0	0	// IDLE1
-0	1	20	0	0	0	0	// IDLE2
+0	1	15	1	0	0	0	// IDLE1
+0	1	15	1	0	0	0	// IDLE2
 
-1	6	20	0	0	0	0	// ATTACK1	was 15 fps
-1	6	20	0	0	0	0	// ATTACK2
-61	6	20	0	0	0	0	// ATTACK3
+1	11	15	0	0	0	0	// ATTACK1
+0	1	15	0	0	0	0	// ATTACK2
+0	1	15	0	0	0	0	// ATTACK3
 
-7	5	20	0	0	0	0	// DROP
-12	4	16	0	0	0	0	// RAISE
-17	38	20	0	0	0	0	// RELOAD1	was 16 fps
-17	38	27	0	0	0	0	// RELOAD2
-17	38	20	0	0	0	0	// RELOAD3
+12	5	15	0	0	0	0	// DROP
+17	4	15	0	0	0	0	// RAISE
+0	1	15	0	0	0	0	// RELOAD1
+0	1	15	4	0	0	0	// RELOAD2
+0	1	15	0	0	0	0	// RELOAD3
 
-72	6	18	0	0	0	0	// ALTSWITCH switching away
-67	6	18	0	0	0	0	// ALTSWITCH switching to
+0	1	15	1	0	0	0	// WEAP_ALTSWITCHFROM
+0	1	15	1	0	0	0	// WEAP_ALTSWITCHTO
 0	1	20	1	0	0	0	// DROP2
