--- a/etmain/models/multiplayer/kar98/weapon.cfg
+++ b/etmain/models/multiplayer/kar98/weapon.cfg
@@ -4,10 +4,8 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
-
 
 //                                             	 barrel                     	 barrel
 //    first     length      fps      looping  	anim bits      animated weap   	draw bits
@@ -34,5 +32,4 @@ newfmt
 
 78	47	20	0	0	0	0	// equipping grenade (for gpg40)
 147	28	20	0	0	0	0	// un-equipping grenade
-
-128	4	20	0	0	0	0	// DROP (for gpg40)
+128	4	20	0	0	0	0	// DROP2 (for gpg40)
