--- a/etmain/models/multiplayer/mg42/weapon.cfg
+++ b/etmain/models/multiplayer/mg42/weapon.cfg
@@ -7,7 +7,6 @@
 newfmt
 // config file for weapon animations
 
-
 //                                             	 barrel                     	 barrel
 //    first     length      fps      looping  	anim bits      animated weap   	draw bits
 //     /      ___/          /         /          /               /                  /
@@ -22,7 +21,7 @@ newfmt
 134	1	20	1	0	0	0 	// IDLE2			// idle in prone
 
 1	8	20	8	0	0	0	// ATTACK1
-158	3	20	3	0	0	0       // ATTACK2			// attack in prone
+158	3	20	3	0	0	0   // ATTACK2			// attack in prone
 9	10	20	0	0	0	0	// WEAP_ATTACK_LASTSHOT
 
 19	11	40	0	0	0	0	// DROP
@@ -31,7 +30,7 @@ newfmt
 186	30	24	0	0	0	0	// RELOAD2			// unset and drop
 160	27	9	0	0	0	0	// RELOAD3			// reload in prone
 
-186	19	18	0	0	0	0	// WEAP_ALTSWITCHFROM		// unset bipod
+186	19	18	0	0	0	0	// WEAP_ALTSWITCHFROM	// unset bipod
 111	20	18	0	0	0	0	// WEAP_ALTSWITCHTO		// set bipod
-103	31	18	0	0	0	0	// WEAP_DROP2			// raise and set
+103	31	18	0	0	0	0	// DROP2			    // raise and set
 
