--- a/etmain/models/multiplayer/mortar/weapon.cfg
+++ b/etmain/models/multiplayer/mortar/weapon.cfg
@@ -4,10 +4,8 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
-
 
 //                                             	 barrel                     	 barrel
 //    first     length      fps      looping  	anim bits      animated weap   	draw bits
@@ -19,24 +17,22 @@ newfmt
 ///   	 /   	 /   	 /   	 /   	 /   	 ______________________________/
 //   	/   	/   	/   	/   	/   	/
 
-13	1	20	1	0	0	0	// WEAP_IDLE1 holding
-45	1	20	1	0	0	0	// WEAP_IDLE2 deployed 
+13	1	20	1	0	0	0	// IDLE1 holding
+45	1	20	1	0	0	0	// IDLE2 deployed 
 
-51	14	16	0	0	0	0	// WEAP_ATTACK1 load and fire is one
-1	1	1	0	0	0	0	// WEAP_ATTACK2 not used
-1	1	1	0	0	0	0	// WEAP_ATTACK_LASTSHOT not used
+51	14	16	0	0	0	0	// ATTACK1 load and fire is one
+1	1	1	0	0	0	0	// ATTACK2 not used
+1	1	1	0	0	0	0	// ATTACK_LASTSHOT not used
 
-81	8	18	0	0	0	0	// WEAP_DROP drop
-0	13	20	0	0	0	0	// WEAP_RAISE raise
-1	1	1	0	0	0	0	// WEAP_RELOAD1 not used
-1	1	1	0	0	0	0	// WEAP_RELOAD2 not used
-1	1	1	0	0	0	0	// WEAP_RELOAD3	not used
+81	8	18	0	0	0	0	// DROP drop
+0	13	20	0	0	0	0	// RAISE raise
+1	1	1	0	0	0	0	// RELOAD1 not used
+1	1	1	0	0	0	0	// RELOAD2 not used
+1	1	1	0	0	0	0	// RELOAD3	not used
 
 66	15	15	0	0	0	0	// WEAP_ALTSWITCHFROM put away
 14	30	18	0	0	0	0	// WEAP_ALTSWITCHTO putup
+1	1	1	0	0	0	0	// DROP2
 
-1	1	1	0	0	0	0	// WEAP_DROP2 not used
-81	8	27	0	0	0	0	// WEAP_FASTDROP
-0	13	30	0	0	0	0	// WEAP_FASTRAISE
 
 
