--- a/etmain/models/multiplayer/silencedcolt/weapon.cfg
+++ b/etmain/models/multiplayer/silencedcolt/weapon.cfg
@@ -4,10 +4,8 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
-
 
 //                                 barrel                     barrel
 //    first  length  fps  looping  anim bits  animated weap   draw bits
@@ -32,5 +30,6 @@ newfmt
 17	37	27	0	0	0	0	// RELOAD2
 17	37	20	0	0	0	0	// RELOAD3
 
-80	23	18	0	0	0	0	// ALTSWITCH (to)	(SA) new alt-mode switching anim
-56	22	18	0	0	0	0	// ALTSWITCH (from)	(SA) new alt-mode switching anim
+80	23	18	0	0	0	0	// ALTSWITCH (to)
+56	22	18	0	0	0	0	// ALTSWITCH (from)
+0	1	20	0	0	0	0	// WEAP_DROP2 notused
