--- a/etmain/models/weapons2/colt/weapon.cfg
+++ b/etmain/models/weapons2/colt/weapon.cfg
@@ -4,10 +4,8 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
-
 
 //                                 barrel                     barrel
 //    first  length  fps  looping  anim bits  animated weap   draw bits
@@ -32,5 +30,6 @@ newfmt
 17	38	27	0	0	0	0	// RELOAD2
 17	38	20	0	0	0	0	// RELOAD3
 
-0	1	20	0	0	0	0	// ALTSWITCH (from)	(SA) new alt-mode switching anim
-0	1	20	0	0	0	0	// ALTSWITCH (to)	(SA) new alt-mode switching anim
+0	1	20	0	0	0	0	// ALTSWITCH
+0	1	20	0	0	0	0	// ALTSWITCH
+0	1	20	1	0	0	0	// DROP2
