--- a/etmain/models/weapons2/fg42/weapon.cfg
+++ b/etmain/models/weapons2/fg42/weapon.cfg
@@ -4,10 +4,8 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
-
 
 //                                 barrel                     barrel
 //    first  length  fps  looping  anim bits  animated weap   draw bits
@@ -32,5 +30,6 @@ newfmt
 17	48	32	1	0	0	0	// RELOAD2
 17	48	24	1	0	0	0	// RELOAD3
 
-0	1	20	1	0	0	0	// ALTSWITCH switch away // (SA) new alt-mode swithing anim
-0	1	20	1	0	0	0	// ALTSWITCH switch to // (SA) new alt-mode swithing anim
+0	1	20	1	0	0	0	// ALTSWITCH switch away
+0	1	20	1	0	0	0	// ALTSWITCH switch to
+0	1	20	1	0	0	0	// DROP2
