--- a/etmain/models/weapons2/grenade/weapon.cfg
+++ b/etmain/models/weapons2/grenade/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
 //
-//		Luger
+//		GRENADE
 //
 ///////////////////////
 
@@ -17,19 +17,19 @@ newfmt
 ///   /   /   /   /   /   ______________________________/
 //   /   /   /   /   /   /
 
-0	1	20	0	0	0	0	// IDLE1
-0	1	20	0	0	0	0	// IDLE2
+0	1	20	1	0	0	0	// IDLE1
+0	1	20	1	0	0	0	// IDLE2
 
-1	6	20	0	0	0	0	// ATTACK1	was 15 fps
-1	6	20	0	0	0	0	// ATTACK2
-61	6	20	0	0	0	0	// ATTACK3
+1	2	10	0	0	0	0	// ATTACK1
+1	2	10	0	0	0	0	// ATTACK2
+1	2	10	0	0	0	0	// ATTACK3
 
 7	5	20	0	0	0	0	// DROP
-12	4	16	0	0	0	0	// RAISE
-17	38	20	0	0	0	0	// RELOAD1	was 16 fps
-17	38	27	0	0	0	0	// RELOAD2
-17	38	20	0	0	0	0	// RELOAD3
+12	4	10	0	0	0	0	// RAISE
+12	4	16	0	0	0	0	// RELOAD1
+12	4	16	4	0	0	0	// RELOAD2
+12	4	16	0	0	0	0	// RELOAD3
 
-72	6	18	0	0	0	0	// ALTSWITCH switching away
-67	6	18	0	0	0	0	// ALTSWITCH switching to
+0	1	20	1	0	0	0	// ALTSWITCH
+0	1	20	1	0	0	0	// ALTSWITCH
 0	1	20	1	0	0	0	// DROP2
