--- a/etmain/models/weapons2/silencer/weapon.cfg
+++ b/etmain/models/weapons2/silencer/weapon.cfg
@@ -4,10 +4,8 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
-
 
 //                                 barrel                     barrel
 //    first  length  fps  looping  anim bits  animated weap   draw bits
@@ -32,5 +30,6 @@ newfmt
 17	38	27	0	0	0	0	// RELOAD2
 17	38	20	0	0	0	0	// RELOAD3
 
-81	19	16	0	0	0	0	// (1.2 sec) ALTSWITCH switching away	(SA) new alt-mode switching anim
-56	24	20	0	0	0	0	// (1.19 sec) ALTSWITCH switching to	(SA) new alt-mode switching anim
+81	19	16	0	0	0	0	// (1.2 sec) ALTSWITCH switching away
+56	24	20	0	0	0	0	// (1.19 sec) ALTSWITCH switching to
+0	1	20	1	0	0	0	// DROP2
