--- a/etmain/models/multiplayer/satchel/weapon.cfg
+++ b/etmain/models/multiplayer/satchel/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
-//
-//		Luger
+//    
+//          Satchel Charge and radio detinoator
 //
 ///////////////////////
 
@@ -17,19 +17,19 @@ newfmt
 ///   /   /   /   /   /   ______________________________/
 //   /   /   /   /   /   /
 
-0	1	20	0	0	0	0	// IDLE1
-0	1	20	0	0	0	0	// IDLE2
+8	1	20	1	0	0	0	// IDLE1        Bag
+24	1	20	1	0	0	0	// IDLE2        Radio
 
-1	6	20	0	0	0	0	// ATTACK1	was 15 fps
-1	6	20	0	0	0	0	// ATTACK2
-61	6	20	0	0	0	0	// ATTACK3
+3	4	20	0	0	0	0	// ATTACK1	Bag
+24	13	18	1	0	0	0	// ATTACK2      Radio
+0	1	20	0	0	0	0	// ATTACK3    notused
 
-7	5	20	0	0	0	0	// DROP
-12	4	16	0	0	0	0	// RAISE
-17	38	20	0	0	0	0	// RELOAD1	was 16 fps
-17	38	27	0	0	0	0	// RELOAD2
-17	38	20	0	0	0	0	// RELOAD3
+8	7	20	0	0	0	0	// DROP		Bag	
+0	8	16	0	0	0	0	// RAISE	Bag
+37	8	20	0	0	0	0	// Drop		Radio
+15	9	18	1	0	0	0	// Raise	Radio
+0	1	18	1	0	0	0	// RELOAD3    notused
 
-72	6	18	0	0	0	0	// ALTSWITCH switching away
-67	6	18	0	0	0	0	// ALTSWITCH switching to
-0	1	20	1	0	0	0	// DROP2
+0	1	20	1	0	0	0	// ALTSWITCH  notused
+0	1	20	1	0	0	0	// ALTSWITCH  notused
+0	1	20	1	0	0	0	// DROP2      notused
