--- a/etmain/models/weapons2/bazooka/weapon.cfg
+++ b/etmain/models/weapons2/bazooka/weapon.cfg
@@ -4,16 +4,18 @@
 //
 ///////////////////////
 
-
 newfmt
 // config file for weapon animations
 
-
-// first  length  fps  looping
-//  /   ___/      /     /
-// /   /   ______/     /
-///   /   /   ________/
-//   /   /   /
+//                                 barrel                     barrel
+//    first  length  fps  looping  anim bits  animated weap   draw bits
+//     /   ___/      /     /      /           /              /
+//    /   /   ______/     /      /           /              /
+//   /   /   /   ________/      /           /              /
+//  /   /   /   /   ___________/           /              /
+// /   /   /   /   /   ___________________/              /
+///   /   /   /   /   /   ______________________________/
+//   /   /   /   /   /   /
 
 0	1	20	1	0	0	0	// IDLE1
 0	1	20	1	0	0	0	// IDLE2
@@ -28,5 +30,6 @@ newfmt
 0	1	20	1	0	0	0	// RELOAD2
 0	1	20	1	0	0	0	// RELOAD3
 
-0	1	20	1	0	0	0	// ALTSWITCH	(SA) new alt-mode switching anim
-0	1	20	1	0	0	0	// ALTSWITCH	(SA) new alt-mode switching anim
+0	1	20	1	0	0	0	// ALTSWITCH
+0	1	20	1	0	0	0	// ALTSWITCH
+0	1	20	1	0	0	0	// DROP2
