--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -10,6 +10,7 @@ init
 	setl g_doWarmup 0
 	setl g_maxlives 0
 	setl g_teamforcebalance 1
+	setl g_noTeamSwitching 0
 	setl g_lms_teamForceBalance 1
 	setl g_voicechatsallowed 5
 	setl g_warmup 30
