--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,10 +107,9 @@ option(FEATURE_DBMS		"Enable dbms support (sqlite3)"						ON)
 option(FEATURE_RATING		"Enable skill rating"							OFF)
 option(FORCE_DEBUG		"Force enable legacy debug macros"					OFF)
 
+cmake_dependent_option(FEATURE_LUASQL	"Enable LuaSQL in mod code (sqlite3 backend)"			ON "FEATURE_LUA" OFF)
 cmake_dependent_option(FEATURE_OMNIBOT	"Enable Omni-bot in mod code (Windows, linux and OS X only)"	ON "WIN32 OR APPLE OR CMAKE_SYSTEM_NAME MATCHES Linux" OFF)
 cmake_dependent_option(INSTALL_OMNIBOT	"Install Omni-bot"						ON "FEATURE_OMNIBOT" OFF)
-
-cmake_dependent_option(INSTALL_LUASQL	"Builds and installs LuaSQL (sqlite3 backend)"			ON "FEATURE_LUA" OFF)
 
 option(ARM			"Build ARM version"							OFF)
 
@@ -167,10 +166,6 @@ endif(BUILD_MOD)
 if(BUILD_PAK3_PK3)
 	include(cmake/ETLBuildPack.cmake)
 endif(BUILD_PAK3_PK3)
-
-if(INSTALL_LUASQL)
-	include(cmake/ETLBuildLuaSQL.cmake)
-endif(INSTALL_LUASQL)
 
 #-----------------------------------------------------------------
 # Post build
