misc: define omnibot URL in cmake file only, refs #890

--- a/cmake/CPackOptions.cmake.in
+++ b/cmake/CPackOptions.cmake.in
@@ -23,4 +23,6 @@ if(CPACK_GENERATOR MATCHES "NSIS")
 	set(SOURCE_DIR "@PROJECT_SOURCE_DIR@")
 	set(BINARY_DIR "@CMAKE_BINARY_DIR@")
 	set(FILE_VERSION "@ETL_CMAKE_PROD_VERSIONDOT@")
+	set(OMNIBOT_ARCHIVE "@ETLEGACY_OMNIBOT_ARCHIVE@")
+	set(OMNIBOT_ARCHIVE_URL "@ETLEGACY_OMNIBOT_ARCHIVE_URL@")
 endif(CPACK_GENERATOR MATCHES "NSIS")
