--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,24 +10,23 @@ version: 2.75.{build}
 
 # branches to build
 branches:
-	# whitelist
-	only:
-		- master
+  only:
+    - master
 
 # Build worker image (VM template)
 image: Visual Studio 2015
 
 # environment variables
 environment:
-	VisualStudioVersion: 14.0
+  VisualStudioVersion: "14.0"
 
 # scripts that run after cloning repository
 install:
-	- cmd: git submodule update --init --recursive
+  - cmd: git submodule update --init --recursive
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-	- "easybuild.bat clean build package"
+  - "easybuild.bat clean build package"
 
 # to disable automatic builds
 build: off
@@ -43,9 +42,8 @@ deploy: off
 #---------------------------------#
 
 notifications:
-	# Gitter Webhook
-	- provider: Webhook
-		url: https://webhooks.gitter.im/e/88b2318a9e31215be0c9
-		on_build_success: false
-		on_build_failure: true
-		on_build_status_changed: true
+  - provider: Webhook
+    url: https://webhooks.gitter.im/e/88b2318a9e31215be0c9
+    on_build_success: false
+    on_build_failure: true
+    on_build_status_changed: true
