--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,10 +26,10 @@ install:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-  - "easybuild.bat clean build package"
+  - cmd: easybuild.bat clean build package
 
 # to disable automatic builds
-build: off
+build: on
 
 # to disable automatic tests
 test: off
@@ -42,6 +42,14 @@ deploy: off
 #---------------------------------#
 
 notifications:
+  - provider: Email
+    to:
+      - mail@etlegacy.com
+    subject: Build {{status}}
+    message: '{{commitId}}, {{message}}'
+    on_build_success: false
+    on_build_failure: false
+    on_build_status_changed: true
   - provider: Webhook
     url: https://webhooks.gitter.im/e/88b2318a9e31215be0c9
     on_build_success: false
